# cirrhosis-prediction

./: .gitignore  README.md  pyproject.toml  pyproject.toml.backup
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
cirrhosis_predictor/: __init__.py
model/: model.pkl
notebooks/: 01_eda_and_baseline.ipynb  02_catboost_optuna.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
